# pure_pursuit_ros2

./: CMakeLists.txt  package.xml
autonomous_proto/: CMakeLists.txt
autonomous_proto/include/: autonomous_proto.hpp
autonomous_proto/proto/: communication_command.proto  control.proto  local_path.proto  message_info.proto  navigation.proto  navigation_path.proto  sphere.proto  vehicle_state.proto
autonomous_proto/proto/cpp_out/: communication_command.pb.cc  communication_command.pb.h  control.pb.cc  control.pb.h  local_path.pb.cc  local_path.pb.h  message_info.pb.cc  message_info.pb.h  navigation.pb.cc  navigation.pb.h  navigation_path.pb.cc  navigation_path.pb.h  sphere.pb.cc  sphere.pb.h  vehicle_state.pb.cc  vehicle_state.pb.h
autonomous_proto/proto/python_out/: communication_command_pb2.py  control_pb2.py  local_path_pb2.py  message_info_pb2.py  navigation_path_pb2.py  navigation_pb2.py  sphere_pb2.py  vehicle_state_pb2.py
include/: pure_puresuit.hpp
src/: main.cpp  pure_pursuit.cpp
