<?xml version="1.0"?>
<package format="3">
    <name>motion_control_pure</name>
    <version>0.0.0</version>
    <description>The motion_control_pure package</description>

    <maintainer email="todo@todo.todo">todo</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
